# ToolboxAI-Solutions

./: .coderabbit.yaml  .coderabbit.yml  .coverage 2  .cursorrules  .dockerignore  .env.example  .env.local.example  .env.supabase.local.example  .env.vercel.example  .eslintrc.json  .flake8  .gitignore  .gitleaks.toml  .mcp-env.sh  .mcp.json  .npmrc  .pre-commit-config.yaml  .safety-policy.yml  .stignore  .trivyignore  .vercelignore  .yamllint.yml  2025-IMPLEMENTATION-STANDARDS.md  404.html  ACCESSIBILITY_GUIDE.md  ALL_ERRORS_FIXED_READY.md  ALL_FIXES_COMPLETE.md  ALL_FIXES_COMPLETE_FINAL.md  ANALYTICS_BEFORE_AFTER_COMPARISON.md  ANALYTICS_PRODUCTION_IMPLEMENTATION_COMPLETE.md  ANALYTICS_PRODUCTION_PLAN.md  API_MISMATCHES_REPORT.md  BACKEND_ANALYSIS.md  BACKEND_DEPENDENCIES_FIX.md  BACKEND_DEPLOYMENT_FIX.md  BACKEND_DEV_IMPLEMENTATION.md  BACKEND_PRODUCTION_IMPLEMENTATION_SUMMARY.md  BACKEND_RUNNING_SUCCESS.md  BACKEND_STARTED_SUCCESS.md  BRANCH_STATUS_ANALYSIS_2025-10-11.md  (+300 more)
.claude/: MCP_SETUP.md  mcp.json  settings.json  system.json  worktree-settings.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CODEOWNERS-backup-original  CODEOWNERS-disabled  CODERABBIT_INSTALLATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LABELS.md  PULL_REQUEST_TEMPLATE.md  SECURITY_ALERT.md  code-scan002.csv  copilot-autofix.yml  dependabot.yml  instructions.md  labels.json  pull_request_template.md  trivy.yaml
.teamcity/: README.md  deployment.kts  import_config.sh  pom.xml  settings.kts  settings.kts.backup-20251112-212227
.typing/: pyright.after-config.json  pyright.initial.json  pyright.iter1.json  pyright.iter2.json  pyright.iter3.json  pyright.scan.json
.vercel/: project.json
02-overview/: index.html
03-architecture/: index.html
04-api/: index.html
05-implementation/: index.html
06-features/: index.html
07-user-guides/: index.html
08-operations/: index.html
09-reference/: index.html
10-meta/: index.html
11-reports/: index.html
12-sdks/: index.html
Archive/: README.md  index.html
Archive/2025-09-11/deprecated/ghost-backend/: .env.secure  .gitignore  pyproject.toml  requirements-dev.txt
Archive/2025-09-11/deprecated/ghost-backend/.github/ISSUE_TEMPLATE/: bug_report.md  security_issue.md
Archive/2025-09-11/deprecated/ghost-backend/.github/workflows/: ci.yml  dependencies.yml  deploy.yml
Archive/2025-09-11/deprecated/ghost-backend/config/: config.production.yaml  nginx-example.conf  port-mapping.yaml
Archive/2025-09-11/deprecated/ghost-backend/config/environments/: .env.docker.template  .env.example  .env.production.example
Archive/2025-09-11/deprecated/ghost-backend/scripts/: verify_security.sh
Archive/2025-09-11/deprecated/ghost-backend/src/ghost/: agent_models.py  api.py  database.py  database_config.py.backup  educational_models.py  logging.py  models.py  py.typed  quiz_models.py  roblox_models.py
Archive/2025-09-11/deprecated/ghost-backend/tests/: __init__.py  test_framework.py
Archive/2025-09-11/deprecated/ghost-backend/tools/: backend_manager.py
Archive/2025-09-11/deprecated/ghost-backend/tools/scripts/: architecture_review.py  backend_status.py  database_migrations.py  frontend_detector.py  frontend_watcher.py
Archive/2025-09-11/deprecated/ghost-backend/tools/security/: runtime_env.sh
Archive/2025-09-11/deprecated/ghost-backend/tools/setup/: env_helpers.sh  migrate_old.sh
CHANGELOG/: index.html
DOCUMENTATION_AUDIT_REPORT_2025-10-01/: index.html
DOCUMENTATION_UPDATE_SUMMARY_2025/: index.html
Documentation/: .audit_log.md  README.md  complete_reorganization.sh  feedback.md  feedback.md-e
IMPLEMENTATION_SUMMARY_2025/: index.html
MANTINE_MIGRATION_GUIDE/: index.html
README_UPDATE_2025/: index.html
TODO/: index.html
ToolboxAI-Roblox-Environment/: API_FIXES_SUMMARY.md  DATABASE_OPTIMIZATION_REPORT.md  ENHANCED_CONTENT_AGENT_INTEGRATION.md  TEST_REPORT_FINAL.md  aftman.toml  core_agent_communication_test_report_20250908_205943.json  default.project.json  detailed_errors.txt  fix_model_references.py  full_test_results.txt  integration_test_results.json  load_test_results_20250910_101847.json  performance_validation_20250909_211558.json  requirements.txt  setup_complete_database.py  setup_database.sql  setup_database_simple.py  setup_databases.py  setup_rojo_integration.sh  test_auth_system.py  (+12 more)
(+5797 files in other folders)
